# mtcnn

app/: build.gradle
app/src/androidTest/java/com/example/mtcnn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  face-detect-lib.cpp
app/src/main/java/com/example/mtcnn/: MainActivity.kt
app/src/test/java/com/example/mtcnn/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
